# super_mono

./: README.md
monopolio-01/: README.md  pyproject.toml
monopolio-01/notebooks/: exploracion_mono.ipynb  primera_exploracion.ipynb
monopolio-01/src/monopolio_01/: __init__.py  __main__.py  settings.py
