[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "monopolio_01"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
monopolio-01 = "monopolio_01.__main__:main"

[tool.kedro]
package_name = "monopolio_01"
project_name = "monopolio_01"
kedro_init_version = "0.19.9"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "monopolio_01.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "bd50a164647e473fbd5f3d029445e3f4"
